// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PickerInput should be rendered correctly 1`] = `
<div
  className="container uui-input-box -clickable colorSky root size-36 mode-form"
  onKeyDown={[Function]}
  onMouseDown={[Function]}
>
  <div
    className="body"
  >
    <input
      aria-haspopup={true}
      className="uui-input singleInput"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Please select "
      tabIndex={0}
      type="text"
      value=""
    />
  </div>
  <div
    className="actions"
  >
    <div
      className="container uui-icon uui-enabled"
      style={Object {}}
    >
      <svg
        className=""
        height={24}
        viewBox="0 0 12 24"
        width={12}
      >
        <use
          xlinkHref="#folding-arrow-18.svg"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`PickerInput should be rendered correctly with extra props 1`] = `
<div
  className="container uui-input-box -clickable colorSky root size-24 mode-form"
  onKeyDown={[Function]}
  onMouseDown={[Function]}
>
  <div
    className="body multiline"
  >
    <div
      className="container uui-button-box uui-enabled root font-sans-semibold size-18 fill-solid color-night300 root"
      href={null}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={null}
    >
      <div
        className="uui-caption"
      >
        Ken Sánchez
      </div>
      <div
        className="container uui-icon uui-enabled -clickable -clickable"
        onClick={[Function]}
        style={Object {}}
      >
        <svg
          className=""
          height={24}
          viewBox="0 0 12 24"
          width={12}
        >
          <use
            xlinkHref="#btn-cross-12.svg"
          />
        </svg>
      </div>
    </div>
    <div
      className="container uui-button-box uui-enabled root font-sans-semibold size-18 fill-solid color-night300 root"
      href={null}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={null}
    >
      <div
        className="uui-caption"
      >
        Terri Duffy
      </div>
      <div
        className="container uui-icon uui-enabled -clickable -clickable"
        onClick={[Function]}
        style={Object {}}
      >
        <svg
          className=""
          height={24}
          viewBox="0 0 12 24"
          width={12}
        >
          <use
            xlinkHref="#btn-cross-12.svg"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="actions"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-icon-cancel -clickable"
      onClick={[Function]}
      style={Object {}}
      tabIndex={-1}
    >
      <svg
        className=""
        height={24}
        viewBox="0 0 12 24"
        width={12}
      >
        <use
          xlinkHref="#btn-cross-12.svg"
        />
      </svg>
    </div>
  </div>
</div>
`;
